--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					     <div class="top-menu">
 							<span class="menu"> </span>
 								<ul class="cl-effect-16">
-								 <li><a class="active" href="index.html" data-hover="主页">主</a></li>
+								 <li><a class="active" href="index.html" data-hover="主页">主页页</a></li>
 								<li><a  href="about.html" data-hover="关于">关于</a></li>
 								<li><a href="typography.html" data-hover="服务">服务</a></li>
 								<li><a href="gallery.html" data-hover="照片廊">照片廊</a></li>
