--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <li><a class="active" href="index.html" data-hover="主页">主页</a></li>
  								<li><a  href="about.html" data-hover="关于">关于</a></li>
  								<li><a href="typography.html" data-hover="服务">服务</a></li>
- 								<li><a href="gallery.html" data-hover="照片廊">照片廊</a></li>
+ 								<li><a href="gallery.html" data-hover="车型查询">车型查询</a></li>
  								<li><a href="blog.html" data-hover="博客">博客</a></li>
  								<li><a href="contact.html" data-hover="联系我">联系我</a></li>
 								  <div class="clearfix"></div>
@@ -108,7 +108,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-md-4 gallery-left">
 						<a href="images/g3.jpg" class=" mask b-link-stripe b-animate-go   swipebox"  title="Image Title">
-								<img src="images/g3.jpg" alt="" class="img-responsive zoom-img"/>
+								<img src="images/g8.png" alt="" class="img-responsive zoom-img"/>
 						</a>
 					</div>
 					<div class="clearfix"> </div>
