--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					     <div class="top-menu">
 							<span class="menu"> </span>
 								<ul class="cl-effect-16">
-								 <li><a class="active" href="index.html" data-hover="主页">主页页</a></li>
+								 <li><a class="active" href="index.html" data-hover="主页">主页</a></li>
 								<li><a  href="about.html" data-hover="关于">关于</a></li>
 								<li><a href="typography.html" data-hover="服务">服务</a></li>
-								<li><a href="gallery.html" data-hover="照片廊">照片廊</a></li>
+								<li><a href="gallery.html" data-hover="车型查询">车型查询</a></li>
 								<li><a href="blog.html" data-hover="博客">博客</a></li>
 								<li><a href="contact.html" data-hover="联系我">联系我</a></li>
 								  <div class="clearfix"></div>
@@ -64,20 +64,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<ul class="rslides" id="slider4">
 						<li>
 									<div class="banner-info">
-										<h3>我们将会接你</h3>
-										<h4>无论你去哪</h4>
+										<h3>准时·准点·安全送达</h3>
+										<h4>优质,专业,值得您的信赖</h4>
 									</div>
 								</li>
 								<li>
 									<div class="banner-info">
 									   <h3>电话 : 13517263031</h3>
-										<h4>24小时的士服务</h4>
+										<h4>湖北省武汉市接送服务</h4>
 									</div>
 								</li>
 								<li>
 									<div class="banner-info">
-										<h3>我们将会接你</h3>
-										<h4>无论你去哪</h4>
+                    <h3>准时·准点·安全送达</h3>
+										<h4>优质,专业,值得您的信赖</h4>
 									</div>
 								</li>
 							</ul>
