gallery img updated

--- a/gallery.html
+++ b/gallery.html
@@ -63,52 +63,52 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
    <!--gallery-->
 	<div class="gallery">
 		<div class="container">
-		 <h3 class="tittle">Gallery</h3>
+		 <h3 class="tittle">车型列表</h3>
 			<div class="portfolio-bottom">
 				<div class="gallery-one">
 					<div class="col-md-4 gallery-left">
 						<a href="images/g1.jpg" class=" mask b-link-stripe b-animate-go   swipebox"  title="Image Title">
-						<img src="images/g1.jpg" alt="" class="img-responsive zoom-img"/>
+						<img src="images/g8.jpg" alt="" class="img-responsive zoom-img"/>
 						</a>
 					</div>
 					<div class="col-md-4 gallery-left">
 						<a href="images/g2.jpg" class=" mask b-link-stripe b-animate-go   swipebox"  title="Image Title">
-								<img src="images/g2.jpg" alt="" class="img-responsive zoom-img"/>
+								<img src="images/g10.jpg" alt="" class="img-responsive zoom-img"/>
 						</a>
 					</div>
 					<div class="col-md-4 gallery-left">
 						<a href="images/g3.jpg" class=" mask b-link-stripe b-animate-go   swipebox"  title="Image Title">
-								<img src="images/g3.jpg" alt="" class="img-responsive zoom-img"/>
+								<img src="images/g11.jpg" alt="" class="img-responsive zoom-img"/>
 						</a>
 					</div>
 					<div class="col-md-4 gallery-left">
 						<a href="images/g7.jpg" class=" mask b-link-stripe b-animate-go   swipebox"  title="Image Title">
-								<img src="images/g7.jpg" alt="" class="img-responsive zoom-img"/>
+								<img src="images/g11.jpg" alt="" class="img-responsive zoom-img"/>
 						</a>
 					</div>
 					<div class="col-md-4 gallery-left">
 						<a href="images/g5.jpg" class=" mask b-link-stripe b-animate-go   swipebox"  title="Image Title">
-								<img src="images/g5.jpg" alt="" class="img-responsive zoom-img"/>
+								<img src="images/g10.jpg" alt="" class="img-responsive zoom-img"/>
 						</a>
 					</div>
 					<div class="col-md-4 gallery-left">
 						<a href="images/g6.jpg" class=" mask b-link-stripe b-animate-go   swipebox"  title="Image Title">
-								<img src="images/g6.jpg" alt="" class="img-responsive zoom-img"/>
+								<img src="images/g8.jpg" alt="" class="img-responsive zoom-img"/>
 						</a>
 					</div>
 					<div class="col-md-4 gallery-left">
 						<a href="images/g2.jpg" class=" mask b-link-stripe b-animate-go   swipebox"  title="Image Title">
-								<img src="images/g2.jpg" alt="" class="img-responsive zoom-img"/>
+								<img src="images/g11.jpg" alt="" class="img-responsive zoom-img"/>
 						</a>
 					</div>
 					<div class="col-md-4 gallery-left">
 						<a href="images/g4.jpg" class=" mask b-link-stripe b-animate-go   swipebox"  title="Image Title">
-								<img src="images/g4.jpg" alt="" class="img-responsive zoom-img"/>
+								<img src="images/g10.jpg" alt="" class="img-responsive zoom-img"/>
 						</a>
 					</div>
 					<div class="col-md-4 gallery-left">
 						<a href="images/g3.jpg" class=" mask b-link-stripe b-animate-go   swipebox"  title="Image Title">
-								<img src="images/g8.png" alt="" class="img-responsive zoom-img"/>
+								<img src="images/g8.jpg" alt="" class="img-responsive zoom-img"/>
 						</a>
 					</div>
 					<div class="clearfix"> </div>
