--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <li><a class="active" href="index.html" data-hover="主页">主页</a></li>
      								<li><a  href="about.html" data-hover="关于">关于</a></li>
      								<li><a href="typography.html" data-hover="服务">服务</a></li>
-     								<li><a href="gallery.html" data-hover="照片廊">照片廊</a></li>
+     								<li><a href="gallery.html" data-hover="车型查询">车型查询</a></li>
      								<li><a href="blog.html" data-hover="博客">博客</a></li>
      								<li><a href="contact.html" data-hover="联系我">联系我</a></li>
 								  <div class="clearfix"></div>
@@ -64,12 +64,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!--start-about-->
 	<div class="about two">
 		<div class="container">
-		 <h3 class="tittle">About Us</h3>
+		 <h3 class="tittle">关于我们</h3>
 				<div class="about-top">
 					<div class="col-md-7 about-top-right">
-						<h4>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</h4>
-						<p>Fusce feugiat malesuada odio orbi nunc odio gravida at cursus nec luctus a lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna onec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo.Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend.</p>
-						<p>Bulum iaculis lacinia est. Proin dictum elemntum velit. Fusce euismod cons equat ante. Lorem ipsum dmeconsectetuer adipiscing elit. ellentesque sed dolor. Aliquam congue fermentum nisl. Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla vene natis. In pede mi aliquet sit amet euismod in auctor ut ligula. </p>
+						<h4>世纪永洪创立于2016年1月，主要为个人和企业用户提供综合租车服务，是为湖北省农科院等事业单位服务多年的汽车租赁企业。</h4>
+						<p></p>
+						<p></p>
 					</div>
 					<div class="col-md-5 about-top-left">
 						<img src="images/ab.jpg" class="img-responsive" alt=""/>
@@ -109,7 +109,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		  </div>
        </div>
 	<!--//team-->
-	<div class="testimonials">
+	<!--<div class="testimonials">
 	  <div class="container">
 	   <h3 class="tittle two">Testimonials</h3>
 		<div  id="top" class="callbacks_container">
@@ -153,7 +153,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</ul>
 				</div>
 		</div>
-	</div>
+	</div>-->
 	<!-- banner-text Slider starts Here -->
 		<script src="js/responsiveslides.min.js"></script>
 		<script>
