--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="about-top">
 					<div class="col-md-7 about-top-right">
 						<h4>专业的服务</h4>
-						<p>长期稳定的为事业单位服务.</p>
-						<p>Bulum iaculis lacinia est. Proin dictum elemntum velit. Fusce euismod cons equat ante. Lorem ipsum dmeconsectetuer adipiscing elit. ellentesque sed dolor. Aliquam congue fermentum nisl. Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla vene natis. In pede mi aliquet sit amet euismod in auctor ut ligula. </p>
+						<p>专线接送、婚庆租车、自驾旅游、商务出差</p>
+						<p>公司现有各种中高档商务车型,包括别克Gl8,广本雅阁,丰田CRV等,主要为湖北武汉事业单位、婚庆公司、外资企业、中外社会团体、宾馆酒店、旅游公司等提供多元化的租车需求,可根据客户需要配置车型,提供多种租赁方式供客户选择,如机场接送、商务考察、通勤班车、会后旅游包车及大型会议用车等.公司拥有专业的管理人才、现代化的车辆调度中心、驾驶经验丰富和服务意识良好的司机团队,所有车辆均安装了全球定位的GPS系统. 我们将始终把为客户提供优质、安全、高效、便捷的租车服务放在第一位,将努力为每一位客户提供舒适、宽松的租车环境,细致而周到的租车服务.我们愿以热情优质的服务,换取您对我们的信任与支持.</p>
 					</div>
 					<div class="col-md-5 about-top-left">
 						<img src="images/wel.jpg" class="img-responsive" alt=""/>
@@ -131,7 +131,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
      <div class="service-section">
 	    <div class="container">
 			<div class="tittle-head">
-		       <h3 class="tittle">Services</h3>
+		       <h3 class="tittle">服务</h3>
 			</div>
 		    <div class="serve-grids">
 			      <div class="col-md-6 serve-left">
@@ -186,7 +186,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
      <div class="mid-section">
 	    <div class="container">
 		     <div class="mid-top">
-		        <h2>我们一直在这里为你服务</h2>
+		        <h2>我们一直在这里为你服务·武汉</h2>
 				<p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incidi- dunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Ut enim ad minim veniam.</p>
 		     </div>
 		</div>
@@ -199,13 +199,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h4>Contact</h4>
 					 </div>
 					<form>
-					     <input type="text" class="text" value="Name" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Name';}">
-						 <input type="text" class="text" value="Email Address" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Email Address';}">
-						<input type="text" class="text" value="Subject" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Subject';}">
-						<textarea value="Message" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Message';}">Message</textarea>
+					     <input type="text" class="text" value="名字" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Name';}">
+						 <input type="text" class="text" value="邮箱地址" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Email Address';}">
+						<input type="text" class="text" value="主题" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Subject';}">
+						<textarea value="信息" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Message';}">信息</textarea>
 						<div class="clearfix"> </div>
 						<div class="sub-button">
-							<input name="submit" type="submit" value="Send ">
+							<input name="submit" type="submit" value="发送">
 						</div>
 					</form>
 				</div>
@@ -215,7 +215,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="footer">
 				<div class="container">
 					<div class="copy">
-		              <p>Copyright &copy; 2015.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+		              <p>Copyright &copy; 2016.世纪永洪汽车租赁公司 All rights reserved.</p>
 		            </div>
 
 				</div>
